# content_analysis_sdk

./: .gitignore  CMakeLists.txt  README.md  prepare_build  prepare_build.bat
agent/: README.md
agent/demo/: CMakeLists.txt  agent.cc  prepare_build  prepare_build.bat
agent/include/content_analysis/sdk/: analysis_agent.h  result_codes.h
agent/src/: agent_base.cc  agent_base.h  agent_mac.cc  agent_mac.h  agent_posix.cc  agent_posix.h  agent_test_shell.cc  agent_utils_win.cc  agent_win.cc  agent_win.h  agent_win_test.cc  agent_win_unittest.cc  event_base.cc  event_base.h  event_mac.cc  event_mac.h  event_mac_unittest.cc  event_posix.cc  event_posix.h  event_posix_unittest.cc  event_win.cc  event_win.h  event_win_unittest.cc  scoped_print_handle_base.cc  scoped_print_handle_base.h  scoped_print_handle_mac.cc  scoped_print_handle_mac.h  scoped_print_handle_posix.cc  scoped_print_handle_posix.h  scoped_print_handle_win.cc  scoped_print_handle_win.h  session_base.h  session_mac.h  session_win.cc  session_win.h
browser/demo/: CMakeLists.txt  client.cc  prepare_build  prepare_build.bat
browser/include/content_analysis/sdk/: analysis_client.h
browser/src/: client_base.cc  client_base.h  client_mac.cc  client_mac.h  client_posix.cc  client_posix.h  client_win.cc  client_win.h
common/: utils_win.cc  utils_win.h
demo/: CMakeLists.txt  CMakeLists.txt.orig  README.md  agent.cc  client.cc  demo_utils.h  demo_utils_posix.cc  demo_utils_win.cc  handler.h  lock.h  prepare_build  prepare_build.bat  queued_agent.cc  queued_agent_posix.cc  queued_agent_win.cc  request_queue.h
proto/content_analysis/sdk/: acknowledgement.proto  analysis.proto  handshake.proto
